# abx_amr_simulator

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  debug_resumption.py  pyproject.toml
abx_amr_simulator/: README.md  __init__.py  wrappers.py
abx_amr_simulator/analysis/: README.md  __init__.py  diagnostic_analysis.py  evaluative_plots.py  visualize_env_behavior.py
abx_amr_simulator/core/: base_patient_generator.py  protocols.py  types.py
abx_amr_simulator/debug/: debug_micro_epochs.py
abx_amr_simulator/gui/: experiment_viewer.py  launch_apps.py  viewer_entry.py
abx_amr_simulator/misc/: __init__.py  cluster_convert_models.py
abx_amr_simulator/training/: train.py
abx_amr_simulator/utils/: __init__.py  metrics.py  registry.py  visualization.py
docs/: CHANGELOG.md
docs/api_reference/: amr_dynamics_abc.md  environments.md  option_abc.md  patient_generator_abc.md  reward_calculator_abc.md
docs/tutorials/: 01_basic_training.md  02_config_scaffolding.md  02_custom_experiments.md  03_custom_experiments.md  04_gui_usage.md  04_optimization.md  05_gui_usage.md  05_hrl_quickstart.md  06_hrl_quickstart.md  06_optimization.md  07_hrl_diagnostics.md  07_options_library_setup.md  08_hrl_diagnostics.md  08_hrl_rppo_manager.md  09_hrl_rppo_manager.md  09_options_library_setup.md  10_advanced_heuristic_worker_subclassing.md  10_experiment_set_runner.md  11_advanced_heuristic_worker_subclassing.md  11_component_subclassing.md  12_callbacks_and_logging.md  13_callbacks_and_logging.md  plugin_seam_guide.md
src/abx_amr_simulator/: README.md  formatters.py
src/abx_amr_simulator/analysis/: diagnostic_analysis.py  evaluative_plots.py  granular_logging.py  probe_hidden_belief.py  probe_recurrent_run.py  visualize_env_behavior.py
src/abx_amr_simulator/callbacks/: __init__.py  early_stopping.py  lstm_state_logger.py
src/abx_amr_simulator/core/: __init__.py  abx_amr_env.py  base_amr_dynamics.py  base_patient_generator.py  base_reward_calculator.py  leaky_balloon.py  patient_generator.py  reward_calculator.py
src/abx_amr_simulator/debug/: __init__.py  debug_micro_epochs.py
src/abx_amr_simulator/gui/: README.md  __init__.py  config_validation.py  experiment_runner.py  experiment_viewer.py  launch_apps.py  patient_gen_ui_helper.py  runner_entry.py  viewer_entry.py
src/abx_amr_simulator/hrl/: __init__.py  base_option.py  manager_obs.py  option_loaders.py  options.py  setup_options.py  wrapper.py
src/abx_amr_simulator/mbpo/: __init__.py  dynamics_model.py  mbpo_agent.py  trajectory_replay_env.py
src/abx_amr_simulator/misc/: cluster_convert_models.py
src/abx_amr_simulator/options/: __init__.py  alternation_loader.py  block_loader.py  heuristic_loader.py
src/abx_amr_simulator/scripts/: __init__.py  run_optuna_parallel.slurm  run_optuna_parallel_local.sh
src/abx_amr_simulator/training/: __init__.py  postgres_utils.py  setup_tuning.py  shutdown_postgres.py  (+4 more)
tests/: conftest.py  test_postgres_utils.py
tests/analysis/: test_evaluative_plots.py  test_probe_recurrent_run.py
tests/hrl/: __init__.py  conftest.py  test_base_option.py  test_heuristic_injection.py  test_heuristic_option.py  test_hrl.py  test_option_loaders.py  test_options_library.py  test_wrapper.py
tests/integration/: test_env_reward_pipeline.py  test_heuristic_attribute_estimation.py  test_heuristic_uncertainty_with_mixer.py  test_hrl_diagnostics.py  test_patient_generator_integration.py  test_patient_generator_mixer.py  test_plugin_integration.py  test_train_workflow.py  test_training_reproducibility.py  test_true_vs_observed_values.py  test_tuning_config_validation.py  test_tuning_integration.py
tests/tuning/: test_default_configs.py  test_distributed_tuning.py  test_tpe_config.py
tests/utils/: test_plugin_loader.py
(+125 files in other folders)
