[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abx-amr-simulator"
version = "0.1.0"
description = "Reinforcement learning simulator for optimizing antibiotic prescribing under antimicrobial resistance"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "ABX AMR Team"},
]

dependencies = [
    "numpy>=1.25,<2.0",
    "pyyaml>=6.0",
    "gymnasium>=0.28",
    "stable-baselines3>=2.2.1",
    "sb3-contrib>=2.2.1",
    "torch==2.2.2",
    "tensorboard>=2.13",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
gui = [
    "streamlit>=1.28",
]

[project.scripts]
abx-amr-simulator-experiment-runner = "abx_amr_simulator.gui.runner_entry:main"
abx-amr-simulator-experiment-viewer = "abx_amr_simulator.gui.viewer_entry:main"
abx-amr-simulator-launch-gui = "abx_amr_simulator.gui.launch_apps:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["abx_amr_simulator", "abx_amr_simulator.*"]

[tool.setuptools.package-data]
abx_amr_simulator = [
    "py.typed",
    "configs/**/*.yaml",
]
